# klickhouse-example

./: .env  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  aarch64.Dockerfile  confik.toml  devenv.nix  devenv.yaml  docker-m1-build.sh  werf-giterminism.yaml  werf.yaml  x86.Dockerfile
.github/workflows/: build.yml  deploy.yml  main.yml  outdated.yaml
src/: cli.rs  config.rs  lib.rs  main.rs
src/clickhouse/: config.rs  logger.rs  mod.rs  pool.rs
src/clickhouse/migrations/: mod.rs  v1_initial.rs  v2_logs_table.rs  v2_web_logs_table.rs
src/clickhouse/models/: mod.rs  web_server_log.rs
src/clickhouse/queries/: logs_query.rs  mod.rs
src/services/: get_web_logs_service.rs  mod.rs
src/web/: app_state.rs  global_panic_handler.rs  mod.rs  startup.rs
src/web/handlers/: get_logs_handler.rs  mod.rs
src/web/middleware/: clickhouse_logger.rs  mod.rs
