[package]
name = "klickhouse-example"
version = "0.1.0"
edition = "2021"

[lib]
name = "klickhouse_example"
path = "src/lib.rs"

[[bin]]
name = "klickhouse_example"
path = "src/main.rs"

[dependencies]
klickhouse = { git = "https://github.com/katanacap/klickhouse.git", tag = "v1.14.2", package = "klickhouse", features = ["default", "bb8", "tls"] }
klickhouse_derive = { git = "https://github.com/katanacap/klickhouse.git", tag = "v1.14.2", package = "klickhouse_derive" }

## tokio
tokio = { version = "1.43.0", features = ["full"] }

## actix
actix-web = "4.9.0"
actix-web-prom = "0.9.0"

## tracing
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-actix-web = "0.7.15"

## error handling
eyre = "0.6.12"
thiserror = "2.0.11"

## config
confik = "0.12.0"

## json
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sonic-rs = "0.3.17"

## another
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.30", features = ["derive"] }
futures = "0.3.31"
futures-util = "0.3.31"


[dev-dependencies]
actix-web-test = "0.0.1"
pretty_assertions = "1.4.1"

[profile.dev]
panic = "unwind"
incremental = true
opt-level = 0
lto = false

[profile.release]
panic = "abort"
incremental = false
lto = true
opt-level = 3
codegen-units = 1